--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     </form>
     <h1 class="hidden" id="greeting"></h1>
     <h2 id="clock">00:00</h2>
+    <div id="quote">
+      <span></span>
+    </div>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
   </body>
 </html>
