--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Momentum App</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <form class="hidden" id="login-form">
@@ -20,5 +19,6 @@
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <link rel="stylesheet" property="stylesheet" href="style.css" />
   </body>
 </html>
