--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     </form>
     <h1 class="hidden" id="greeting"></h1>
     <h2 id="clock">00:00</h2>
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press Enter" />
+    </form>
+    <ul id="todo-list">
+      <li></li>
+    </ul>
     <div id="quote">
       <span></span>
     </div>
@@ -19,6 +25,7 @@
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
     <link rel="stylesheet" property="stylesheet" href="style.css" />
   </body>
 </html>
