--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Momentum App</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <form class="hidden" id="login-form">
+    <form id="login-form">
       <input type="text" placeholder="What is your name" />
       <button>Log In</button>
     </form>
@@ -15,9 +16,7 @@
     <form id="todo-form">
       <input type="text" placeholder="Write a To Do and Press Enter" />
     </form>
-    <ul id="todo-list">
-      <li></li>
-    </ul>
+    <ul id="todo-list"></ul>
     <div id="quote">
       <span></span>
     </div>
@@ -26,6 +25,5 @@
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
-    <link rel="stylesheet" property="stylesheet" href="style.css" />
   </body>
 </html>
