--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <div id="quote">
       <span></span>
     </div>
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
